--- a/.github/workflows/update_sender.yml
+++ b/.github/workflows/update_sender.yml
@@ -9,9 +9,20 @@ jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
+      - name: repo checkout
+        uses: actions/checkout@v3
+        
+      - name: obtain-email
+        run: |
+          echo "user_email=$(git log -1 --pretty=format:'%ae')" >> $GITHUB_ENV
+    
       - name: signal
         run: |
           curl -X POST https://api.github.com/repos/PedrooMachado23/inpe_scholarship/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
           -u ${{ secrets.PING_TOKEN }} \
-          --data '{"event_type": "ping", "client_payload": {"repository": "'"${{ github.repository }}"'", "smd_name": "data_plotter"}}'
+          --data '{"event_type": "ping", "client_payload": {
+            "repository": "'"${{ github.repository }}"'",
+            "smd_name": "field-research-data-treatment",
+            "user_name": "'"${{ github.actor }}"'",
+            "user_email": "'"${{ env.user_email }}"'"}}'
